--- a/style.css
+++ b/style.css
@@ -1,7 +1,34 @@
 
+h3 {
+    border-style: double;
+    border-color: hsl(346, 63%, 71%);
+    border-width: 1mm;
+    border-radius: 5Q;
+    margin-top: 10vh;
+    margin-bottom: 1lvw;
+    margin-left: 5px;
+    margin-right: 50vw;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 10px;
+    padding-right: 2%;
+}
+
+h4{
+    /* width style color */
+    border: 1mm dotted #db2323;
+    /* <top> <right> <bottom> <left> */
+    margin: 10px 5px 10px 2px;
+    /* <top> <right> <bottom> <left> */
+    padding: 5px 2px 5px 5px;
+}
+
+p{
+    margin:auto;
+}
+
 header{
-    background-color: #000;
-    color: hsl(346, 100%, 90%);
+    /*background-color: #000;*/
     font-family: 'Comic Neue', cursive;
 }
 
