--- a/style.css
+++ b/style.css
@@ -51,3 +51,9 @@ button:hover {
 button:active{
     box-shadow: 2px 2px 5px blue;
 }
+
+@media(min-device-width: 768px){
+    h1{
+        font-size: 48px;
+    }
+}
